# MCU

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yaml  Makefile  Readme.md  mcu-codespell.precommit-toml  tkdk-codespell.precommit-toml
mcm/: README.md  pyproject.toml
mcm/model_cache_manager/: __init__.py
mcm/model_cache_manager/cli/: cli_helpers.py  cli_options.py  main.py
mcm/model_cache_manager/data/: __init__.py  cache_repo.py  database.py  db_config.py  db_models.py  kernel_validator.py
mcm/model_cache_manager/plugins/: cuda.py  discovery.py
mcm/model_cache_manager/runtime/: tracker.py
mcm/model_cache_manager/services/: base.py  index.py  prune.py  search.py  warm.py
mcm/model_cache_manager/strategies/: __init__.py  base.py  triton_strategy.py  vllm_strategy.py
mcm/model_cache_manager/tests/cli/: test_vllm_cli.py
mcm/model_cache_manager/utils/: config.py  logger.py  mcm_constants.py  paths.py  utils.py
tcm/: README.md  pyproject.toml  requirements.txt  setup.py
tcm/triton_cache_manager/: __init__.py
tcm/triton_cache_manager/cli/: __init__.py  main.py
tcm/triton_cache_manager/data/: cache_repo.py  database.py  db_config.py  db_models.py  kernel_validator.py
tcm/triton_cache_manager/models/: criteria.py  kernel.py
tcm/triton_cache_manager/plugins/: base.py  cuda.py  rocm.py
tcm/triton_cache_manager/runtime/: tracker.py
tcm/triton_cache_manager/services/: index.py  prune.py  search.py  warm.py
tcm/triton_cache_manager/utils/: config.py  logger.py  paths.py  size_utils.py  tcm_constants.py  utils.py
(+156 files in other folders)
